# KAGGLE-GeoLifeCLEF-2022

./: README.md  config-sample.yaml  eval-model-slurm.py  pyproject.toml  slurm-rf.py  submit-slurm.py
torchtmpl/: data.py  data_rf.py  main.py  merge_script.py  random_forest.py  utils.py
torchtmpl/models/: __init__.py  base_models.py  cnn_models.py  pretrained_models.py  transfo_models.py  xgboost_model.py
torchtmpl/tests/: test_topk.py
